--- a/index.html
+++ b/index.html
@@ -3,10 +3,18 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-        <title>JS vježbe</title>
-        <script src="./scripts.js"></script>
+        <title>PWA</title>
+        <link rel="manifest" href="mypwa.webmanifest" />
     </head>
     <body>    
+
+<h1>Naša PWA stranica</h1>
+<h2>Dobrodošli!</h2>
+
+
+
+<script src="JS/app.js"></script>
+
 
 	</body>
 
